# midnight

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 0001_init.sql
src/: app.rs  main.rs
src/config/: mod.rs
src/db/: migrations.rs  mod.rs  pool.rs
src/handlers/: logs_handler.rs  messages_handler.rs  mod.rs  templates_handler.rs  webhooks_handler.rs
src/middleware/: api_key_auth.rs  mod.rs  rate_limit.rs  request_id.rs
src/models/: api_key.rs  message.rs  mod.rs  template.rs  tenant.rs  webhook_event.rs
src/providers/: email_provider.rs  mock_provider.rs  mod.rs  sms_provider.rs  whatsapp_provider.rs
src/routes/: health.rs  logs.rs  messages.rs  mod.rs  templates.rs  webhooks.rs
src/services/: message_service.rs  mod.rs  provider_service.rs  queue_service.rs  retry_service.rs  template_service.rs
src/state/: mod.rs
src/utils/: errors.rs  mod.rs  response.rs  signatures.rs
src/workers/: mod.rs  retry_worker.rs  sender_worker.rs
tests/: api-tests.ps1
